# Blang

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  mainpage.dox  tree.txt  xmake.lua
include/: ast.hpp  blang.hpp  buaa.hpp  evaluator.hpp  ir.hpp  ir_generator.hpp  lexer.hpp  logger.hpp  optimizer.hpp  parser.hpp  symbol_table.hpp  syntax_checker.hpp  token.hpp  type.hpp  visitor.hpp
lib/: blang.cpp  buaa.cpp
lib/backend/: ir_generator.cpp  optimizer.cpp
lib/entities/: ast.cpp  ir.cpp  symbol_table.cpp
lib/frontend/: blang.cpp  lexer.cpp  parser.cpp  syntax_checker.cpp
lib/tools/: evaluator.cpp  logger.cpp
run_env/: lib.ll  link.ll  link.s  llvm_ir.txt  main  makefile  testfile.txt
